added web app and license

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -2,11 +2,11 @@
 MAIL_PASSWORD=
 MAIL_EMAIL=
 
-# AfricasTalking
+# AfricasTalking Credentials
 AT_KEY=
 AT_NAME=
 
-# Supabase
+# Supabase Configurations
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 
